fix: overflow and settings

--- a/src/components/FeatureHeader/FeatureHeader.module.scss
+++ b/src/components/FeatureHeader/FeatureHeader.module.scss
@@ -2,7 +2,6 @@
 
 .container {
   background: $ui-01;
-  overflow: hidden;
   padding: 1.5rem;
 
   &.border {
