--- a/src/features/Designer/components/DesignerHeader/DesignerHeader.module.scss
+++ b/src/features/Designer/components/DesignerHeader/DesignerHeader.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   height: 9.0625rem;
   justify-content: space-between;
-  padding-bottom: 0rem;
+  padding-bottom: 0rem !important;
   position: relative;
 }
 
